# ctest

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: test-action.yml
app/: CMakeLists.txt  main.cpp  quad.cpp  quad.hpp
tests/: CMakeLists.txt  main.cpp  test_quad.hpp  testplan.md
